修改排程订单获取逻辑